--- a/BinaryCalculatorWebapp/k8s/binarycalculator-deploy.yaml
+++ b/BinaryCalculatorWebapp/k8s/binarycalculator-deploy.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: binarycalculator
-        image: <repo-path>/binarycalculator
+        image: northamerica-northeast2-docker.pkg.dev/lab3-451022/sofe3980u/binarycalculator
         ports:
         - containerPort: 8080
